--- a/app/src/main/res/layout/activity_scores.xml
+++ b/app/src/main/res/layout/activity_scores.xml
@@ -5,7 +5,7 @@
     android:id="@+id/ScorePage"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ScoresActivity">
+    tools:context=".saved.scores.ScoresActivity">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/scoresList"
